# openalgo-flow

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: webhook.py  workflows.py
backend/app/core/: config.py
backend/app/models/: workflow.py
backend/app/services/: executor.py  price_monitor.py
backend/migration/: __init__.py  migrate_all.py
docs/: openalgo-nodesdk.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/layout/: Footer.tsx
frontend/src/components/nodes/: BasketOrderNode.tsx  CancelOrderNode.tsx  ClosePositionsNode.tsx  DelayNode.tsx  ExpiryNode.tsx  FundCheckNode.tsx  GetDepthNode.tsx  GetOrderStatusNode.tsx  GetQuoteNode.tsx  HistoryNode.tsx  IntervalsNode.tsx  LogNode.tsx  ModifyOrderNode.tsx  OpenPositionNode.tsx  OptionsMultiOrderNode.tsx  OptionsOrderNode.tsx  PositionCheckNode.tsx  PriceAlertNode.tsx  PriceConditionNode.tsx  SmartOrderNode.tsx  SplitOrderNode.tsx  StartNode.tsx  TelegramAlertNode.tsx  TimeWindowNode.tsx  VariableNode.tsx  WebhookTriggerNode.tsx  index.ts
frontend/src/components/panels/: ConfigPanel.tsx  NodePalette.tsx
frontend/src/components/ui/: variable-picker.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  constants.ts  websocket.ts
frontend/src/pages/: Dashboard.tsx  Editor.tsx  Settings.tsx
frontend/src/stores/: settingsStore.ts  variableStore.ts
frontend/src/types/: index.ts
